--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body {
 .hero-bg {
     position: absolute;
     inset: 0;
-    background-image: url('./hero-bg.jpg');
+    background-image: url('./hero-bg.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -1589,3 +1589,4 @@ body {
 .from-background\/60 {
     --tw-gradient-from: hsl
 }
+
