--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ body {
 }
 
 .iframe-container {
-    position: relative;
+    position: central;
     width: 100%;
     /* maintain aspect ratio (16:9) for responsiveness */
     aspect-ratio: 16 / 9;
