--- a/style.css
+++ b/style.css
@@ -1520,6 +1520,46 @@ body {
                 0 8px 20px hsl(142 60% 40% / 0.3), 0 0 20px hsl(142 60% 40% / 0.15);
 }
 
+.social-card.tiktok {
+    border-color: #25f4ee;
+}
+
+.social-card.tiktok:hover {
+    border-color: #00f7ef;
+    box-shadow: inset 0 1px 0 hsl(30 15% 30%), inset 0 -1px 0 hsl(30 10% 8%), 
+                0 8px 20px #25f4ee / 0.3, 0 0 20px #25f4ee / 0.15;
+}
+
+.social-card.tiktok-craft {
+    border-color: #25f4ee;
+}
+
+.social-card.tiktok-craft:hover {
+    border-color: #00f7ef;
+    box-shadow: inset 0 1px 0 hsl(30 15% 30%), inset 0 -1px 0 hsl(30 10% 8%), 
+                0 8px 20px #25f4ee / 0.3, 0 0 20px #25f4ee / 0.15;
+}
+
+.social-card.web-map {
+    border-color: hsl(100 60% 45%);
+}
+
+.social-card.web-map:hover {
+    border-color: hsl(100 60% 55%);
+    box-shadow: inset 0 1px 0 hsl(30 15% 30%), inset 0 -1px 0 hsl(30 10% 8%), 
+                0 8px 20px hsl(100 60% 45% / 0.3), 0 0 20px hsl(100 60% 45% / 0.15);
+}
+
+.social-card.bedrock-voice {
+    border-color: hsl(270 60% 50%);
+}
+
+.social-card.bedrock-voice:hover {
+    border-color: hsl(270 60% 60%);
+    box-shadow: inset 0 1px 0 hsl(30 15% 30%), inset 0 -1px 0 hsl(30 10% 8%), 
+                0 8px 20px hsl(270 60% 50% / 0.3), 0 0 20px hsl(270 60% 50% / 0.15);
+}
+
 /* Grass Transition */
 .grass-transition {
     position: absolute;
